# Trajectory_Aware_DRL-NAV

./: .gitignore  LICENSE  README.md  environment.yml
clock_control/: CMakeLists.txt  package.xml
clock_control/src/: clock_plugin.cpp  diff_p.cpp
customCostMap/: CMakeLists.txt  README.md  package.xml  setup.py
customCostMap/launch/: trajectoryCostMap.launch
customCostMap/trajectory/: DOTrajectoryPredectionNode.py  __init__.py  dynamicObjectPredictor.py  dynamicObstacalesTransformationPublisherNode.py  dynamicTransformation.py  trajectoryCostmap.py
diffRobot/: CMakeLists.txt  package.xml
diffRobot/config/: joint_names_diffRobot.yaml
diffRobot/launch/: display.launch  gazebo.launch
diffRobot/meshes/: Lwheel.STL  Rwheel.STL  base_link.STL  lidar.STL
diffRobot/urdf/: diffRobot.csv  diffRobot.urdf.xacro
models/: README.md
models/best_p2p/sac-p2p-env_v2_p2p-2024-09-21 17:52:21.524231/: episode_evals.npy  episode_lengths.npy  episode_rewards.npy  episode_timestamp.npy
models/best_p2p/sac-p2p-mono-env_v2_mono-2024-09-22 03:55:54.489200/: episode_evals.npy  episode_lengths.npy  episode_rewards.npy  episode_timestamp.npy
models/best_p2p/sac-v2-raw-lidar-dynamic-p2p-actors-2024-09-25 21:11:16.777016/: episode_evals.npy  episode_lengths.npy  episode_rewards.npy  episode_timestamp.npy
models/best_tunnel/sac-2024-06-30 21:08:25.506315/: episode_evals.npy  episode_lengths.npy  episode_rewards.npy  episode_timestamp.npy
models/best_tunnel/sac-v2-raw-lidar-dynamic-tunnel-2024-09-26 19:45:39.959087/: episode_evals.npy  episode_lengths.npy  episode_rewards.npy  episode_timestamp.npy
models/best_tunnel/sac_mono_channel-2024-07-04 08:43:52.408907/: episode_evals.npy  episode_lengths.npy  episode_rewards.npy  episode_timestamp.npy
models/best_tunnel/sac_stacked-states-2024-07-06 07:09:52.162889/: episode_evals.npy  (+3 more)
p2p_navigator/: CMakeLists.txt  README.md  package.xml
p2p_navigator/src/: PosesAndGoals.npy  dynamicElements_p2p.Yaml  dynamicEnvironemntManger.py  dynamicEnvironemntUtils.py  goal_randomizer.py  nav_goals.yaml  obstacles.yaml  p2p_evaluator.py  p2p_navigator.py  plot.py  tunnel_evaluator.py  tunnel_navigator.py
scripts/: TrainingCallback.py  sac_v2_lidar.py  sac_v2_lidar_p2p.py  sac_v6.py  sac_v6_mono_channel.py  sac_v6_p2p.py  sac_v6_p2p_mono.py  sac_v6_p2p_n-channel.py  sac_v6_stacked_states.py
simulation_env/: CMakeLists.txt  README.md  package.xml  setup.py
simulation_env/config/: costmap.yaml
simulation_env/launch/: basic_simulation.launch  costmap.launch  movebase.launch
simulation_env/map/: emptymap.yaml
simulation_env/param/: dwa_local_planner_params_bot.yaml  local_costmap_params.yaml
simulation_env/rviz/: rviz.rviz
simulation_env/src/Environment/: diff_Robot_gym_v2.py  diff_Robot_gym_v2_p2p.py  diff_Robot_gym_v6.py  diff_Robot_gym_v6_NChannel.py  diff_Robot_gym_v6_NChannel_p2p.py  diff_Robot_gym_v6_monoChannel.py  diff_Robot_gym_v6_monoChannel_p2p.py  diff_Robot_gym_v6_p2p.py  dynamicElements.Yaml  dynamicElements_p2p.Yaml  dynamicEnvironmentManger.py  envOffsets.yaml  environment_v2.py  environment_v2_p2p.py  environment_v2_raw_p2p_actors.py  environment_v6.py  environment_v6_monoChannel.py  environment_v6_monoChannel_p2p.py  environment_v6_monoChannel_p2p_actors.py  environment_v6_p2p.py  environment_v6_p2p_actors.py  goal_randomizer.py  robotSpawn.Yaml
simulation_env/urdf/: Robot.urdf.xacro  robot_io.gazebo
simulation_env/worlds/: p2p.world  singleAgentDynamicActorsTunnel.world  singleAgentDynamicBoxesTunnel.world  singleAgentdynamic_p2p.world
src/simulation_env/: CMakeLists.txt  package.xml
(+21 files in other folders)
