<?xml version="1.0"?>
<package format="2">
  <name>customCostMap</name>
  <version>1.0.0</version>
  <description>The customCostMap package</description>
  <maintainer email="tareq.a.diab@gmail.com">tareq</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
