<?xml version="1.0"?>
<package format="2">
  <name>p2p_navigator</name>
  <version>0.0.0</version>
  <description>The p2p_navigator package</description>


  <maintainer email="tareq.a.diab@gmail.com">tareq</maintainer>
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


</package>
