<?xml version="1.0"?>
<package format="2">
  <name>simulation_env</name>
  <version>0.0.0</version>
  <description>The simulation_env package</description>
  <maintainer email="tareq.a.diab@gmail.ocm">tareq</maintainer>
  <license>TODO</license>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>

  </export>
</package>
